# django-components-daisyui

./: .gitignore  LICENSE  README.md  coderabbit.yaml  pyproject.toml
django_components_daisyui/components/alert/: alert.py  template.html
django_components_daisyui/tests/: conftest.py  test_alert.py
django_components_daisyui/utils/: kwargs_to_attrs.py
