[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daisyui-components-django"
version = "0.0.1a0"
description = "Reusable daisyUI components with django-components"
authors = [{ name = "Louis Facun", email="louisfacun@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "django>=5.0,<6.0",
    "django-components>=0.25",
]


[project.urls]
Homepage  = "https://github.com/louisfacun/daisyui-components-django"
Issues = "https://github.com/louisfacun/daisyui-components-django/issues"


[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pytest>=8.4.2",
    "pytest-django>=4.5.0",
    "ruff>=0.14.1",
]
