[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-components-daisyui"
version = "0.0.1a1"
description = "Reusable daisyUI components with django-components"
authors = [{ name = "Louis Facun", email="louisfacun@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

dependencies = [
    "django>=5.0,<6.0",
    "django-components>=0.25",
]

[tool.setuptools.package-data]
"django_components_daisyui" = ["components/**/*.html"]

[project.urls]
Homepage  = "https://github.com/louisfacun/django-components-daisyui"
Issues = "https://github.com/louisfacun/django-components-daisyui/issues"


[dependency-groups]
dev = [
    "build>=1.0.0",
    "djlint>=1.36.4",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "twine>=5.0.0",
]
